--- a/src/main/resources/templates/formOrg.html
+++ b/src/main/resources/templates/formOrg.html
@@ -1,6 +1,26 @@
- <form action="add" method="post">
- <input type="text" name="name" placeholder="name">
- <input type="text" name="domain" placeholder="domain">
- <input type="text" name="aliases" placeholder="aliases">
- <input type="submit" value="valider">
+
+
+{{> inc/header}}
+<form class="ui form" action="add" method="post">
+  <div class="field">
+    <label>Nom</label>
+    <input type="text" name="name" placeholder="Nom">
+  </div>
+  <div class="field">
+    <label>Domaine</label>
+    <input type="text" name="domain" placeholder="Domaine">
+  </div>
+   <div class="field">
+    <label>Aliases</label>
+    <input type="text" name="aliases" placeholder="Aliases">
+  </div>
+  <div class="field">
+    <div class="ui checkbox">
+      <input type="checkbox" tabindex="0" class="hidden">
+      <label>J'accepte les conditions</label>
+    </div>
+  </div>
+  <button class="ui button" type="submit">Envoyer</button>
 </form>
+
+{{> inc/footer}}
