--- a/src/main/resources/templates/inc/header.html
+++ b/src/main/resources/templates/inc/header.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Gestion d'items</title>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vuetify/2.5.9/vuetify.min.css" />
+<link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet"> 
 </head>
 <body>
     <div class="ui container">
